# data-sharding

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
sql/: init-main.sql  init-shard.sql
src/: database.py  env.py  main.py  models.py
src/utils/: progress.py
